@@ -58,6 +58,7 @@ Bug Fixes::
 * major improvement to OTF support following release of ttfunk 1.8.0 (automatic transitive dependency of prawn)
 * don't drop line in running content if attribute reference resolves to text that contains attribute reference (not originally present)
 * respect hide-uri-scheme when appending URL to link text when media is print or prepress (#2583)
+* correctly calculate extent for block in columns that starts below doctitle (#2579)
 
 Compliance::
 
